chore: Steering guides, Agent hooks, Turbo & Pnpm integration

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "turbo build",
     "build:packages": "turbo build --filter='./packages/*'",
+    "postinstall": "turbo build --filter='./packages/*' --continue",
     "build:web": "turbo build --filter='@c9d/web'",
     "build:vercel": "node scripts/vercel-build.js",
     "build:ci": "turbo build --cache-dir=.turbo/cache",
@@ -17,11 +18,20 @@
     "start": "pnpm --filter '@c9d/web' run start",
     "test": "turbo test",
     "test:run": "turbo test:run",
+    "test:dev": "turbo test:dev",
+    "test:watch": "turbo test:watch",
     "test:ci": "turbo test:run --cache-dir=.turbo/cache",
     "test:ui": "pnpm --filter '@c9d/web' run test:ui",
     "test:packages": "turbo test --filter='./packages/*'",
     "test:phase": "node scripts/test-phase-integration.js",
     "test:integration": "node scripts/test-phase-integration.js && turbo test:run",
+    "test:coverage": "turbo test:coverage",
+    "test:e2e": "pnpm --filter '@c9d/web' run test:e2e",
+    "coverage:generate": "node scripts/coverage-reporter.js generate",
+    "coverage:validate": "node scripts/coverage-reporter.js validate",
+    "coverage:report": "node scripts/coverage-reporter.js generate && open apps/web/coverage/index.html",
+    "coverage:summary": "node scripts/coverage-reporter.js validate --format=summary",
+    "coverage:badge": "node scripts/coverage-reporter.js generate --badge-only",
     "clean": "turbo clean && rm -rf .next",
     "clean:cache": "turbo clean && rm -rf .turbo/cache",
     "install:all": "pnpm install",
@@ -31,7 +41,15 @@
     "typecheck:ci": "turbo typecheck --cache-dir=.turbo/cache",
     "validate": "turbo typecheck lint test:run",
     "validate:ci": "turbo typecheck lint test:run --cache-dir=.turbo/cache",
-    "prepare": "pnpm install && turbo build --filter='./packages/*'",
+    "validate:tests": "node scripts/validate-test-commands.js",
+    "validate:complete": "node scripts/validate-task-completion.js",
+    "validate:coverage": "node scripts/coverage-reporter.js validate",
+    "validate:quick": "turbo typecheck lint",
+    "validate:full": "turbo typecheck lint test:coverage build",
+    "validate:task-completion": "node scripts/validate-task-completion.js",
+    "validate:pre-commit": "node .kiro/hooks/pre-commit-quality.ts",
+    "validate:pre-merge": "turbo typecheck lint test:coverage test:integration test:e2e build",
+    "prepare": "echo 'Prepare script completed'",
     "cache:info": "node scripts/ci-cache-management.js info",
     "cache:clean": "node scripts/ci-cache-management.js clean",
     "cache:optimize": "node scripts/ci-cache-management.js optimize",
