feat:Task 11: Complete - Integrate Phase.dev configuration into application startup

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:unit": "vitest run **/*.test.{ts,tsx}",
-    "test:integration": "vitest run __tests__/integration/**/*.test.{ts,tsx}",
-    "test:e2e": "vitest run __tests__/e2e/**/*.test.{ts,tsx}",
-    "test:performance": "vitest run __tests__/performance/**/*.test.{ts,tsx}",
-    "test:comprehensive": "tsx __tests__/test-runner.ts",
-    "test:mocked": "npx vitest run __tests__/integration/auth-flow-fixed.integration.test.ts",
-    "test:real-integration": "tsx __tests__/run-real-integration-tests.ts",
-    "test:real-db": "npx vitest run __tests__/integration/real-database-integration.test.ts",
-    "test:real-clerk": "npx vitest run __tests__/integration/real-clerk-integration.test.ts",
-    "test:setup": "tsx __tests__/setup-real-integration-tests.ts",
-    "test:validate": "tsx __tests__/validate-real-integrations.ts",
-    "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch",
-    "typecheck": "tsc --noEmit"
+    "build": "node ../../scripts/run-with-env.js next build",
+    "dev": "node ../../scripts/run-with-env.js next dev",
+    "lint": "node ../../scripts/run-with-env.js next lint",
+    "start": "node ../../scripts/run-with-env.js next start",
+    "test": "node ../../scripts/run-with-env.js vitest run",
+    "test:run": "node ../../scripts/run-with-env.js vitest run",
+    "test:ui": "node ../../scripts/run-with-env.js vitest --ui",
+    "test:unit": "node ../../scripts/run-with-env.js vitest run **/*.test.{ts,tsx}",
+    "test:integration": "node ../../scripts/run-with-env.js vitest run __tests__/integration/**/*.test.{ts,tsx}",
+    "test:e2e": "node ../../scripts/run-with-env.js vitest run __tests__/e2e/**/*.test.{ts,tsx}",
+    "test:performance": "node ../../scripts/run-with-env.js vitest run __tests__/performance/**/*.test.{ts,tsx}",
+    "test:comprehensive": "node ../../scripts/run-with-env.js tsx __tests__/test-runner.ts",
+    "test:mocked": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/auth-flow-fixed.integration.test.ts",
+    "test:real-integration": "node ../../scripts/run-with-env.js tsx __tests__/run-real-integration-tests.ts",
+    "test:real-db": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-database-integration.test.ts",
+    "test:real-clerk": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-clerk-integration.test.ts",
+    "test:setup": "node ../../scripts/run-with-env.js tsx __tests__/setup-real-integration-tests.ts",
+    "test:validate": "node ../../scripts/run-with-env.js tsx __tests__/validate-real-integrations.ts",
+    "test:coverage": "node ../../scripts/run-with-env.js vitest run --coverage",
+    "test:watch": "node ../../scripts/run-with-env.js vitest --watch",
+    "test:dev": "node ../../scripts/run-with-env.js vitest --watch",
+    "typecheck": "node ../../scripts/run-with-env.js tsc --noEmit"
   },
   "dependencies": {
     "@c9d/config": "workspace:*",
