--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:ui": "pnpm --filter '@c9d/web' run test:ui",
     "test:packages": "turbo test --filter='./packages/*'",
     "test:phase": "node scripts/test-phase-integration.js",
+    "test:phase-env": "node scripts/test-phase-env-integration.js",
     "test:integration": "node scripts/test-phase-integration.js && turbo test:run",
     "test:coverage": "turbo test:coverage",
     "test:e2e": "pnpm --filter '@c9d/web' run test:e2e",
@@ -47,6 +48,9 @@
     "validate:quick": "turbo typecheck lint",
     "validate:full": "turbo typecheck lint test:coverage build",
     "validate:task-completion": "node scripts/validate-task-completion.js",
+    "validate:env": "node scripts/validate-env-availability.js",
+    "validate:env-quick": "node scripts/validate-env-availability.js --quick",
+    "validate:env-skip-tests": "node scripts/validate-env-availability.js --skip-tests",
     "validate:pre-commit": "node .kiro/hooks/pre-commit-quality.ts",
     "validate:pre-merge": "turbo typecheck lint test:coverage test:integration test:e2e build",
     "prepare": "echo 'Prepare script completed'",
