feat: Infrastructure Modernization - Task 13: Implement comprehensive environment variable fallback support

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "phase": {
+    "appName": "AI.C9d.Types"
   }
 }
