--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -16,11 +16,16 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6"
   },
   "devDependencies": {
     "@types/node": "^22",
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "phase": {
+    "appName": "AI.C9d.Config"
   }
 }
