--- a/vercel.json
+++ b/vercel.json
@@ -12,22 +12,11 @@
     }
   },
   "env": {
-    "PHASE_SERVICE_TOKEN": "@phase_service_token",
-    "DATABASE_URL": "@database_url",
-    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "@clerk_publishable_key",
-    "CLERK_SECRET_KEY": "@clerk_secret_key",
-    "NEXT_PUBLIC_SUPABASE_URL": "@supabase_url",
-    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+    "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN"
   },
   "build": {
     "env": {
-      "PHASE_SERVICE_TOKEN": "@phase_service_token",
-      "DATABASE_URL": "@database_url",
-      "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "@clerk_publishable_key",
-      "CLERK_SECRET_KEY": "@clerk_secret_key",
-      "NEXT_PUBLIC_SUPABASE_URL": "@supabase_url",
-      "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key",
-      "NODE_ENV": "production"
+      "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN"
     }
   },
   "headers": [
