--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
