--- a/vercel.json
+++ b/vercel.json
@@ -12,11 +12,21 @@
     }
   },
   "env": {
-    "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN"
+    "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN",
+    "DATABASE_URL": "$DATABASE_URL",
+    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+    "CLERK_SECRET_KEY": "$CLERK_SECRET_KEY",
+    "NEXT_PUBLIC_SUPABASE_URL": "$NEXT_PUBLIC_SUPABASE_URL",
+    "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY"
   },
   "build": {
     "env": {
-      "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN"
+      "PHASE_SERVICE_TOKEN": "$PHASE_SERVICE_TOKEN",
+      "DATABASE_URL": "$DATABASE_URL",
+      "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+      "CLERK_SECRET_KEY": "$CLERK_SECRET_KEY",
+      "NEXT_PUBLIC_SUPABASE_URL": "$NEXT_PUBLIC_SUPABASE_URL",
+      "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY"
     }
   },
   "headers": [
