feat: add edge-runtime compatible configuration
- Created edge-safe configuration module in apps/web/lib/config/edge-config.ts
- Updated apps/web/lib/config/phase.ts to work in Edge Runtime
- Added browser-specific entry point to @c9d/config package
- Fixed TypeScript errors in phase-sdk-client.ts
- Updated vercel.json with rootDirectory for monorepo structure

This allows the app to build on Vercel without Node.js-specific APIs

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "test:phase": "node scripts/test-phase-integration.js",
     "test:phase-env": "node scripts/test-phase-env-integration.js",
     "test:integration": "node scripts/test-phase-integration.js && turbo test:run",
+    "setup:phase-dev": "node scripts/setup-phase-dev.js",
+    "debug:phase-config": "node scripts/debug-phase-config.js",
     "test:coverage": "turbo test:coverage",
     "test:e2e": "pnpm --filter '@c9d/web' run test:e2e",
     "coverage:generate": "node scripts/coverage-reporter.js generate",
