--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,9 +6,10 @@
   "types": "./src/index.ts",
   "exports": {
     ".": {
-      "node": "./src/index.ts",
-      "browser": "./src/index.browser.ts",
-      "default": "./src/index.ts"
+      "node": "./dist/index.js",
+      "browser": "./dist/index.browser.js",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "scripts": {
