feat: Auth User Mgmt - Task 10.1 Achieve 100% test coverage for authentication components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,24 +7,30 @@
     "dev": "node ../../scripts/run-with-env.js next dev -p 3007",
     "lint": "node ../../scripts/run-with-env.js next lint",
     "start": "node ../../scripts/run-with-env.js next start",
-    "test": "node ../../scripts/run-with-env.js vitest run",
-    "test:run": "node ../../scripts/run-with-env.js vitest run",
-    "test:ui": "node ../../scripts/run-with-env.js vitest --ui",
-    "test:unit": "node ../../scripts/run-with-env.js vitest run **/*.test.{ts,tsx}",
-    "test:integration": "node ../../scripts/run-with-env.js vitest run __tests__/integration/**/*.test.{ts,tsx}",
-    "test:e2e": "node ../../scripts/run-with-env.js vitest run __tests__/e2e/**/*.test.{ts,tsx}",
-    "test:performance": "node ../../scripts/run-with-env.js vitest run __tests__/performance/**/*.test.{ts,tsx}",
-    "test:comprehensive": "node ../../scripts/run-with-env.js tsx __tests__/test-runner.ts",
-    "test:mocked": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/auth-flow-fixed.integration.test.ts",
-    "test:real-integration": "node ../../scripts/run-with-env.js tsx __tests__/run-real-integration-tests.ts",
-    "test:real-db": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-database-integration.test.ts",
-    "test:real-clerk": "node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-clerk-integration.test.ts",
-    "test:setup": "node ../../scripts/run-with-env.js tsx __tests__/setup-real-integration-tests.ts",
-    "test:validate": "node ../../scripts/run-with-env.js tsx __tests__/validate-real-integrations.ts",
-    "test:coverage": "node ../../scripts/run-with-env.js vitest run --coverage",
-    "test:watch": "node ../../scripts/run-with-env.js vitest --watch",
-    "test:dev": "node ../../scripts/run-with-env.js vitest --watch",
-    "typecheck": "node ../../scripts/run-with-env.js tsc --noEmit"
+    "test": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run",
+    "test:run": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run",
+    "test:ui": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest --ui",
+    "test:unit": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run **/*.test.{ts,tsx}",
+    "test:integration": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/integration/**/*.test.{ts,tsx}",
+    "test:e2e": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test",
+    "test:e2e:ui": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test --ui",
+    "test:e2e:headed": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test --headed",
+    "test:e2e:debug": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test --debug",
+    "test:performance": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/performance/**/*.test.{ts,tsx}",
+    "test:comprehensive": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/test-runner.ts",
+    "test:mocked": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js npx vitest run __tests__/integration/auth-flow-fixed.integration.test.ts",
+    "test:real-integration": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/run-real-integration-tests.ts",
+    "test:real-db": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-database-integration.test.ts",
+    "test:real-clerk": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js npx vitest run __tests__/integration/real-clerk-integration.test.ts",
+    "test:setup": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/setup-real-integration-tests.ts",
+    "test:validate": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/validate-real-integrations.ts",
+    "test:coverage": "NODE_OPTIONS=\"--max-old-space-size=16384\" node ../../scripts/run-with-env.js vitest run --coverage",
+    "test:watch": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest --watch",
+    "test:dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest --watch",
+    "typecheck": "node ../../scripts/run-with-env.js tsc --noEmit",
+    "test:coverage-focus": "NODE_OPTIONS=\"--max-old-space-size=16384\" node run-coverage-tests.js",
+    "test:memory-safe": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run --pool=forks --poolOptions.forks.singleFork=true",
+    "test:essential": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run --exclude=\"**/interactive-step-component.test.tsx\" --exclude=\"**/organization-setup-wizard.test.tsx\" --exclude=\"**/progress-indicator.test.tsx\""
   },
   "dependencies": {
     "@c9d/config": "workspace:*",
@@ -86,6 +92,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@clerk/testing": "^1.12.6",
+    "@playwright/test": "^1.55.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
