--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "lint:packages": "turbo lint --filter='./packages/*'",
     "lint:ci": "turbo lint --cache-dir=.turbo/cache",
     "start": "pnpm --filter '@c9d/web' run start",
-    "test": "turbo test",
-    "test:run": "turbo test:run",
-    "test:dev": "turbo test:dev",
-    "test:watch": "turbo test:watch",
-    "test:ci": "turbo test:run --cache-dir=.turbo/cache",
-    "test:ui": "pnpm --filter '@c9d/web' run test:ui",
-    "test:packages": "turbo test --filter='./packages/*'",
-    "test:phase": "node scripts/test-phase-integration.js",
-    "test:phase-env": "node scripts/test-phase-env-integration.js",
-    "test:integration": "node scripts/test-phase-integration.js && turbo test:run",
+    "test": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test",
+    "test:run": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test:run",
+    "test:dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test:dev",
+    "test:watch": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test:watch",
+    "test:ci": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test:run --cache-dir=.turbo/cache",
+    "test:ui": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm --filter '@c9d/web' run test:ui",
+    "test:packages": "NODE_OPTIONS=\"--max-old-space-size=8192\" turbo test --filter='./packages/*'",
+    "test:phase": "NODE_OPTIONS=\"--max-old-space-size=8192\" node scripts/test-phase-integration.js",
+    "test:phase-env": "NODE_OPTIONS=\"--max-old-space-size=8192\" node scripts/test-phase-env-integration.js",
+    "test:integration": "NODE_OPTIONS=\"--max-old-space-size=8192\" node scripts/test-phase-integration.js && turbo test:run",
     "setup:phase-dev": "node scripts/setup-phase-dev.js",
     "debug:phase-config": "node scripts/debug-phase-config.js",
-    "test:coverage": "turbo test:coverage",
-    "test:e2e": "pnpm --filter '@c9d/web' run test:e2e",
+    "test:coverage": "NODE_OPTIONS=\"--max-old-space-size=16384\" turbo test:coverage",
+    "test:e2e": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm --filter '@c9d/web' run test:e2e",
+    "test:e2e:ui": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm --filter '@c9d/web' run test:e2e:ui",
+    "test:e2e:headed": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm --filter '@c9d/web' run test:e2e:headed",
+    "test:e2e:debug": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm --filter '@c9d/web' run test:e2e:debug",
+    "test:e2e:comprehensive": "NODE_OPTIONS=\"--max-old-space-size=8192\" tsx apps/web/__tests__/e2e/run-e2e-tests.ts",
     "coverage:generate": "node scripts/coverage-reporter.js generate",
     "coverage:validate": "node scripts/coverage-reporter.js validate",
     "coverage:report": "node scripts/coverage-reporter.js generate && open apps/web/coverage/index.html",
