feat: uth User Mgmt - Task 10.4 Implement performance and security testing

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,11 @@
     "test:e2e:headed": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test --headed",
     "test:e2e:debug": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js playwright test --debug",
     "test:performance": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/performance/**/*.test.{ts,tsx}",
+    "test:performance-security": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/performance/run-performance-security-tests.ts",
+    "test:load": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/performance/auth-load-tests.test.ts",
+    "test:security": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/security/auth-penetration-tests.test.ts",
+    "test:accessibility": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/accessibility/auth-accessibility-compliance.test.ts",
+    "test:mobile": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js vitest run __tests__/performance/mobile-performance-tests.test.ts",
     "test:comprehensive": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/test-runner.ts",
     "test:mocked": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js npx vitest run __tests__/integration/auth-flow-fixed.integration.test.ts",
     "test:real-integration": "NODE_OPTIONS=\"--max-old-space-size=8192\" node ../../scripts/run-with-env.js tsx __tests__/run-real-integration-tests.ts",
@@ -104,6 +109,7 @@
     "@types/react-dom": "^19",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "jest-axe": "^9.0.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
