--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,14 +6,18 @@
   "types": "./src/index.ts",
   "exports": {
     ".": {
-      "node": "./dist/index.js",
+      "edge-light": "./dist/index.browser.js",
+      "worker": "./dist/index.browser.js",
       "browser": "./dist/index.browser.js",
+      "node": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "default": "./dist/index.browser.js"
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "pnpm clean && pnpm build:node && pnpm build:browser",
+    "build:node": "tsc --project tsconfig.json",
+    "build:browser": "tsc --project tsconfig.browser.json",
     "dev": "tsc --watch",
     "lint": "eslint src/",
     "test": "node ../../scripts/run-with-env.js vitest run",
