--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,8 @@
       "inputs": [
         "$TURBO_DEFAULT$",
         ".env.local",
-        ".env.example"
+        ".env.example",
+        ".env.build"
       ],
       "outputs": [
         ".next/**",
@@ -20,12 +21,28 @@
       ],
       "env": [
         "NODE_ENV",
+        "VERCEL",
+        "CI",
         "PHASE_SERVICE_TOKEN",
         "DATABASE_URL",
+        "DIRECT_URL",
         "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
         "CLERK_SECRET_KEY",
+        "CLERK_WEBHOOK_SECRET",
         "NEXT_PUBLIC_SUPABASE_URL",
-        "SUPABASE_SERVICE_ROLE_KEY"
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "SUPABASE_SERVICE_ROLE_KEY",
+        "DB_HOST",
+        "DB_PORT",
+        "DB_NAME",
+        "DB_USER",
+        "DB_PASSWORD",
+        "DIRECT_DB_PORT",
+        "BASE_URL",
+        "GITHUB_APP_ID",
+        "GITHUB_APP_PRIVATE_KEY",
+        "GITHUB_WEBHOOK_SECRET",
+        "GITHUB_WEBHOOK_URL"
       ]
     },
     "dev": {
