--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -121,6 +121,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^22",
     "@types/node-fetch": "^2.6.13",
     "@types/pg": "^8.15.5",
@@ -129,6 +130,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "drizzle-kit": "^0.31.4",
+    "ioredis": "^5.7.0",
     "jest-axe": "^9.0.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5",
