fix: Updates to docs

--- a/.npmrc
+++ b/.npmrc
@@ -19,3 +19,11 @@ fetch-retry-maxtimeout=60000
 # Workspace specific
 link-workspace-packages=true
 shared-workspace-lockfile=true
+
+# Drizzle ORM specific hoisting
+public-hoist-pattern[]=*drizzle*
+public-hoist-pattern[]=@types/pg
+public-hoist-pattern[]=pg
+public-hoist-pattern[]=postgres
+public-hoist-pattern[]=ioredis
+public-hoist-pattern[]=@types/ioredis
