--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,12 +36,16 @@
     "test:coverage-focus": "NODE_OPTIONS=\"--max-old-space-size=16384\" env-wrapper node run-coverage-tests.js",
     "test:memory-safe": "NODE_OPTIONS=\"--max-old-space-size=8192\" env-wrapper vitest run --pool=forks --poolOptions.forks.singleFork=true",
     "test:essential": "NODE_OPTIONS=\"--max-old-space-size=8192\" env-wrapper vitest run --exclude=\"**/interactive-step-component.test.tsx\" --exclude=\"**/organization-setup-wizard.test.tsx\" --exclude=\"**/progress-indicator.test.tsx\"",
-    "db:generate": "env-wrapper drizzle-kit generate",
-    "db:migrate": "env-wrapper drizzle-kit migrate",
-    "db:push": "env-wrapper drizzle-kit push",
-    "db:studio": "env-wrapper drizzle-kit studio",
-    "db:introspect": "env-wrapper drizzle-kit introspect",
-    "db:drop": "env-wrapper drizzle-kit drop",
+    "db:generate": "env-wrapper -- drizzle-kit generate",
+    "db:migrate": "env-wrapper -- drizzle-kit migrate",
+    "db:push": "env-wrapper -- drizzle-kit push",
+    "db:studio": "env-wrapper -- drizzle-kit studio",
+    "db:introspect": "env-wrapper -- drizzle-kit introspect",
+    "db:drop": "env-wrapper -- drizzle-kit drop",
+    "db:generate:raw": "drizzle-kit generate",
+    "db:migrate:raw": "drizzle-kit migrate",
+    "db:push:raw": "drizzle-kit push",
+    "db:studio:raw": "drizzle-kit studio",
     "migrate": "env-wrapper tsx scripts/migrate.ts",
     "migrate:status": "env-wrapper tsx scripts/migrate.ts status",
     "migrate:up": "env-wrapper tsx scripts/migrate.ts up",
