--- a/package.json
+++ b/package.json
@@ -76,7 +76,13 @@
     "cache:report": "node scripts/ci-cache-management.js report",
     "deploy:validate:pre": "node scripts/deployment-validation.js pre-deploy",
     "deploy:validate:post": "node scripts/deployment-validation.js post-deploy",
-    "deploy:rollback": "node scripts/deployment-validation.js rollback"
+    "deploy:rollback": "node scripts/deployment-validation.js rollback",
+    "db:generate": "pnpm --filter @c9d/web db:generate",
+    "db:migrate": "pnpm --filter @c9d/web db:migrate",
+    "db:push": "pnpm --filter @c9d/web db:push",
+    "db:studio": "pnpm --filter @c9d/web db:studio",
+    "db:ensure-wrapper": "node scripts/ensure-env-wrapper.js",
+    "db:validate-setup": "node scripts/validate-drizzle-setup.js"
   },
   "dependencies": {
     "@coordinated/env-tools": "workspace:*",
@@ -84,6 +90,7 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
+    "chalk": "^4.1.2",
     "turbo": "^2.5.6",
     "typescript": "^5"
   }
