--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,11 @@
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "CLERK_SECRET_KEY": "$CLERK_SECRET_KEY",
     "NEXT_PUBLIC_SUPABASE_URL": "$NEXT_PUBLIC_SUPABASE_URL",
-    "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY"
+    "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY",
+    "REDIS_URL": "$REDIS_URL",
+    "REDIS_TOKEN": "$REDIS_TOKEN",
+    "OPENAI_API_KEY": "$OPENAI_API_KEY",
+    "SLACK_SIGNING_SECRET": "$SLACK_SIGNING_SECRET"
   },
   "build": {
     "env": {
@@ -28,7 +32,11 @@
       "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
       "CLERK_SECRET_KEY": "$CLERK_SECRET_KEY",
       "NEXT_PUBLIC_SUPABASE_URL": "$NEXT_PUBLIC_SUPABASE_URL",
-      "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY"
+      "SUPABASE_SERVICE_ROLE_KEY": "$SUPABASE_SERVICE_ROLE_KEY",
+      "REDIS_URL": "$REDIS_URL",
+      "REDIS_TOKEN": "$REDIS_TOKEN",
+      "OPENAI_API_KEY": "$OPENAI_API_KEY",
+      "SLACK_SIGNING_SECRET": "$SLACK_SIGNING_SECRET"
     }
   },
   "headers": [
